debug rides
